# karelpy

./: .gitignore  README.md  SINTAXIS.md  nixpacks.toml  pyproject.toml
karelpy/: __init__.py  ast_nodes.py  errors.py  interpreter.py  lexer.py  parser.py  robot.py  world.py
karelpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_interpreter.py  test_lexer.py  test_parser.py
web/: app.py
web/routes/: generate.py  run.py
web/static/: app.js  style.css
web/templates/: index.html
